Ajustando metatags do site

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,22 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#F2F2F2" />
+    <meta name="description" content="Portifólio para Desenvolvedor Web Frontend. Crie seu site com a melhor e mais atual tecnologia do mercado com um profissional que entende do assunto!" />
+    <meta name="author" content="Gustavo P. Santana" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="pragma" content="no-cache" />
+    <meta http-equiv="content-language" content="pt-br" />
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <meta name="revisit-after" content="1 day" />
+    <meta name="copyright" content="© 2022 Gustavo P. Santana" />
+    <meta name="keywords" content="gustavo, santana, desenvolvedor, desenvolvimento, frontend, backend, html, css, javascript, react, node">
     <link rel="icon" href="%PUBLIC_URL%/icons/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/icons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/icons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/icons/favicon-16x16.png" />
     <link rel="mask-icon" href="%PUBLIC_URL%/icons/safari-pinned-tab.svg" color="#5bbad5" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#F2F2F2" />
-    <meta name="description" content="Portifólio para Desenvolvedor Web Frontend" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Gustavo P. Santana - Desenvolvedor Frontend</title>
   </head>
